[tool.poetry]
name = "sid-kemendesa"
version = "0.1.0"
description = ""
authors = ["hexatester <hexatester@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
attrs = "^20.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.812"
black = "^21.4b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
