[tool.poetry]
name = "sid-kemendesa"
version = "0.1.0"
description = "Module python untuk mencari dan melihat data desa dari sid kemendesa."
authors = ["hexatester <hexatester@protonmail.com>"]
readme = "README.md"
keywords = [
    "sid-desa",
    "kemendesa",
    "python-module",
    "python-sdk",
    "python-wrapper"
]
classifiers=[
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
attrs = "^20.3.0"
cattrs = "^1.6.0"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.812"
black = "^21.4b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
